Modify setting and options for prettier, eslint, eol, etc...

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Pretendard", sans-serif;
+  font-family: 'Pretendard', sans-serif;
   margin: 20px;
   background: #f9f9f9;
   color: #333;
